[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/screen_credits/ScreenCredits.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/GUIFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/Button.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.478431, 0.109804, 0.294118, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Theme" id=3]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 4 )
VScrollBar/styles/grabber_highlight = SubResource( 5 )
VScrollBar/styles/grabber_pressed = SubResource( 6 )
VScrollBar/styles/scroll = SubResource( 7 )
VScrollBar/styles/scroll_focus = SubResource( 8 )

[node name="ScreenCredits" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 90.0
margin_top = 12.0
margin_right = 390.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.313726, 0.266667, 1 )
text = "Credits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 90.0
margin_top = 29.0
margin_right = 390.0
margin_bottom = 33.0
custom_styles/separator = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -120.0
margin_right = -20.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 240 )
theme = SubResource( 3 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 440.0
margin_bottom = 467.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3

[node name="Filler" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = -1.0
margin_right = 440.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
align = 1
autowrap = true

[node name="Filler5" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 440.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
align = 1
autowrap = true

[node name="GameWon" type="Label" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_right = 440.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
text = "Congratulations, you beat all the levels! 

You got all the treasure, but as a consequence unleashed a horde of ravenous killer wurms that will eventually wipe out all life on earth. Well done Steve.

Now go improve your scores!"
align = 1
autowrap = true

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_top = 68.0
margin_right = 440.0
margin_bottom = 72.0
custom_styles/separator = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H1" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 440.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.313726, 0.266667, 1 )
text = "Programming / Art / Writing"
align = 1
autowrap = true

[node name="B1" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 440.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
text = "Sam Bigos
Twitter - @Calneon
itch.io - sambigos
GitHub - samuelbigos"
align = 1
autowrap = true

[node name="H2" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 440.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.313726, 0.266667, 1 )
text = "Music"
align = 1
autowrap = true

[node name="B2" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 179.0
margin_right = 440.0
margin_bottom = 212.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
text = "All music by Visager from Free Music Archive, used under Attribution License."
align = 1
autowrap = true

[node name="H3" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 440.0
margin_bottom = 231.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.313726, 0.266667, 1 )
text = "SFX"
align = 1
autowrap = true

[node name="B3" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 235.0
margin_right = 440.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
text = "512 Sound Effects (8-bit style) - SubspaceAudio"
align = 1
autowrap = true

[node name="B4" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 440.0
margin_bottom = 269.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
text = "8-Bit Sound Effect Pack (Vol. 001) - @Shades"
align = 1
autowrap = true

[node name="H4" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 273.0
margin_right = 440.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.313726, 0.266667, 1 )
text = "Info"
align = 1
autowrap = true

[node name="B5" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 440.0
margin_bottom = 361.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
text = "Tether Well was made in 7 days for Brackeys Jam 2020.2, with the theme REWIND.
The engine used was Godot v3.2.2
Full source is available on my GitHub (see above)."
align = 1
autowrap = true

[node name="Filler2" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 364.0
margin_right = 440.0
margin_bottom = 379.0
rect_min_size = Vector2( 0, 15 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
align = 1
autowrap = true

[node name="H5" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 384.0
margin_right = 440.0
margin_bottom = 399.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.313726, 0.266667, 1 )
text = "Thank you for playing! =D"
align = 1
autowrap = true

[node name="Filler3" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 402.0
margin_right = 440.0
margin_bottom = 432.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
align = 1
autowrap = true

[node name="Filler4" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 436.0
margin_right = 440.0
margin_bottom = 466.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
align = 1
autowrap = true

[node name="Back" parent="." instance=ExtResource( 3 )]
margin_left = 218.0
margin_top = 290.0
margin_right = 262.0
margin_bottom = 311.0
text = "Back"
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
